--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,15 @@ dependencies:
   dart_ping_ios: ^4.0.2
   intl: ^0.19.0
   lottie: ^3.0.0
-  permission_handler: ^11.2.0
   get: ^4.6.6
+  flutter_screenutil: ^5.9.0
+  get_storage: ^2.1.1
+  sqlite3: ^2.3.0
+  path_provider: ^2.1.2
+  drift: ^2.15.0
+  build_runner: ^2.4.8
+  sqlite3_flutter_libs: ^0.5.20
+  # permission_handler: ^11.2.0
   
 dev_dependencies:
   flutter_test:
@@ -38,7 +45,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
