--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -14,6 +14,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>FLTEnableImpeller</key>
+  	<false />
 	<key>CFBundleName</key>
 	<string>pos</string>
 	<key>CFBundlePackageType</key>
